Added style CSS

--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,10 @@
     <title>Contact Croissant</title>
   </head>
   <body>
-    <h1>Contact us</h1>
+    <h1>🥐 Contact us</h1>
     <p>
       To order your fresh croissant, please email us at
-      <a href="mailto:hello@croissant.com">hello@croissant.com</a>
+      <a href="mailto:hello@croissant.com" class="email-link">hello@croissant.com</a>
       and we will contact you
     </p>
     <footer>
