--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Croissant Fun Facts</h1>
+    <h1>🥐 Croissant Fun Facts</h1>
     <p>The original croissant was called Kipfel and originated in Austria in 1683. It was created in honor of the Austrian victory over the Turks and modeled after the crescent on the Turkish flag. (Some historians say the croissant originated in Hungary)
 
 <ul>
