--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <title>Croissant photo</title>
+    <title>🥐 Croissant photo</title>
   </head>
   <body>
     <h1>So delicious croissant</h1>
