--- a/photo.html
+++ b/photo.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <title>🥐 Croissant photo</title>
+    <title>Croissant photo</title>
   </head>
   <body>
-    <h1>So delicious croissant</h1>
+    <h1>🥐 So delicious croissant</h1>
 <img  src="/img/mahyar-motebassem-123wTsGP4LU-unsplash.jpg" alt="Croissant" class="croissant-photo">
     <footer>
       <a href="/" title="Home">Homepage</a>
