--- a/photo.html
+++ b/photo.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Croissant photo</title>
+    <meta
+      name="description"
+      content="Enjoy the beautiful image of croissants"
+    />
   </head>
   <body>
     <h1>🥐 So delicious croissant</h1>
-<img  src="/img/mahyar-motebassem-123wTsGP4LU-unsplash.jpg" alt="Croissant" class="croissant-photo">
+    <img
+      src="/img/mahyar-motebassem-123wTsGP4LU-unsplash.jpg"
+      alt="Croissants"
+      class="croissant-photo"
+    />
     <footer>
       <a href="/" title="Home">Homepage</a>
       <a href="/photo.html" title="Croissant photo">Photo</a>
-      <a href="/contact.html" title="Contact Croissant">Contact</a>
+      <a href="/contact.html" title="Order your croissant">Contact</a>
     </footer>
   </body>
 </html>
