--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>🥐 Croissant Fun Facts</title>
+    <title>Enjoy some croissant Fun Facts 🥐</title>
     <meta name="description" content="The internet is full of fabulous facts about everything from current events to the history basket weaving and croissant fun facts.">
 </head>
 <body>
